[package]
name = "batch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Batch mode support for offline rsync transfer workflows"
repository.workspace = true

[dependencies]
thiserror = "2.0"
protocol = { path = "../protocol" }

[dev-dependencies]
tempfile = "3.10"
