[package]
name = "batch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Batch mode support for offline rsync transfer workflows"
repository.workspace = true

[features]
# Compression algorithm features forwarded from protocol crate.
zstd = ["protocol/zstd"]

[dependencies]
thiserror = "2.0"
protocol = { path = "../protocol" }
metadata = { path = "../metadata" }
filetime = "0.2"

[dev-dependencies]
tempfile = "3.15"
protocol = { path = "../protocol" }

[lints]
workspace = true
