[package]
name = "checksums"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
# Default: pure-Rust implementations with automatic hardware acceleration
# (SHA-NI on x86_64, crypto extensions on aarch64 via cpufeatures)
# SIMD features enabled by default for best performance
default = ["xxh3-simd", "simd-batch"]

# ============================================================================
# SIMD Optimization Features
# ============================================================================
# Runtime SIMD detection for XXH3 (AVX2/NEON) - recommended for portable binaries
# Benefits: 2-3x faster XXH3 hashing on x86_64 with AVX2, ARM with NEON
xxh3-simd = ["dep:xxh3"]

# SIMD-accelerated MD4/MD5 batch hashing (AVX2/AVX-512/NEON)
# Benefits: 3-4x faster MD5 checksums with parallel batch processing
# All implementations maintain RFC compatibility (RFC 1320 for MD4, RFC 1321 for MD5)
simd-batch = []

# Backward compatibility alias for the old feature name
md5-simd = ["simd-batch"]

# ============================================================================
# Parallel Computation Features
# ============================================================================
# Parallel checksum computation using rayon
# Benefits: Multi-threaded checksum calculation for large files
parallel = ["rayon"]

# ============================================================================
# Legacy OpenSSL Features (optional)
# ============================================================================
# OpenSSL-based checksums (fallback for platforms without native acceleration)
openssl = ["dep:openssl"]
openssl-vendored = ["openssl", "openssl/vendored"]

[dependencies]
md4 = { version = "0.10", default-features = false, features = ["std"] }
md-5 = { version = "0.10", default-features = false, features = ["std", "asm"] }
digest = { version = "0.10", default-features = false, features = ["std"] }
sha1 = { version = "0.10", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh64", "xxh3"] }
# xxh3 crate provides runtime SIMD detection (AVX2 on x86_64, NEON on aarch64)
xxh3 = { version = "0.1", optional = true }
thiserror = "2.0"
openssl = { version = "0.10", optional = true }
rayon = { version = "1.10", optional = true }
logging = { path = "../logging" }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tempfile = "3.14"

[[bench]]
name = "checksums_benchmark"
harness = false

[[bench]]
name = "parallel_benchmark"
harness = false
required-features = ["parallel"]

[[bench]]
name = "pipelined_benchmark"
harness = false
