[package]
name = "compress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Compression primitives for the Rust rsync implementation"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["zstd", "lz4"]
zstd = ["dep:zstd"]
lz4 = ["dep:lz4_flex"]
# Use zlib-ng for maximum performance (requires C compiler)
zlib-ng = ["flate2/zlib-ng"]

[dependencies]
# zlib-rs backend: pure Rust with SIMD optimizations (SSE4.2, AVX2, AVX-512)
# Fastest backend overall, no C compiler required
flate2 = { version = "1.0", default-features = false, features = ["zlib-rs"] }
zstd = { version = "0.13", optional = true }
lz4_flex = { version = "0.11", optional = true, default-features = false, features = ["frame", "safe-encode", "safe-decode"] }
thiserror = "2.0"
