[package]
name = "compress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Compression primitives for the Rust rsync implementation"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["zstd", "lz4", "zlib-ng"]
zstd = ["dep:zstd"]
lz4 = ["dep:lz4_flex"]
# zlib-ng backend (C library with SIMD: SSE2, AVX2, NEON) - matches upstream rsync performance
zlib-ng = ["flate2/zlib-ng"]
# Pure Rust fallback - no C compiler required, slower than zlib-ng
zlib-rs = ["flate2/zlib-rs"]

[dependencies]
# Default: miniz_oxide (pure Rust fallback). zlib-ng/zlib-rs override via features.
flate2 = "1.0"
zstd = { version = "0.13", optional = true }
lz4_flex = { version = "0.13", optional = true, default-features = false, features = ["frame", "safe-encode", "safe-decode"] }
thiserror = "2.0"

[lints]
workspace = true
