[package]
name = "core"
version.workspace = true
edition = "2024"
authors = ["Ofer Chen <skewers.irises.3b@icloud.com>"]
license = "GPL-3.0-or-later"
description = "Core utilities shared by the Rust rsync implementation"
repository.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
protocol = { path = "../protocol" }
metadata = { path = "../metadata", default-features = false }
engine = { path = "../engine", default-features = false }
bandwidth = { path = "../bandwidth" }
transport = { path = "../transport" }
filters = { path = "../filters" }
compress = { path = "../compress" }
libc = "0.2"
base64 = "0.22"
tempfile = "3.10"
socket2 = "0.4"
branding = { path = "../branding" }

[target.'cfg(unix)'.dependencies]
checksums = { path = "../checksums" }
nix = { version = "0.29", default-features = false, features = ["user"] }
rustix = { version = "0.38", features = ["process"] }

[target.'cfg(windows)'.dependencies]
checksums = { path = "../checksums", default-features = false }

[target.'cfg(unix)'.dependencies.metadata]
path = "../metadata"
default-features = false
features = ["xattr"]

[target.'cfg(unix)'.dependencies.engine]
path = "../engine"
default-features = false
features = ["xattr"]

[features]
default = ["zstd", "lz4", "acl", "xattr", "iconv"]
acl = ["metadata/acl", "engine/acl"]
# xattr in core is a no-op on Windows; on Unix the target deps above add the real bits
xattr = []
zstd = ["engine/zstd", "compress/zstd"]
lz4 = ["engine/lz4", "compress/lz4"]
iconv = []
sd-notify = []

[dev-dependencies]
filetime = "0.2"
tempfile = "3.10"
