[package]
name = "core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core utilities shared by the Rust rsync implementation"
repository.workspace = true
build = "build.rs"

# Doctests are disabled because the crate name "core" shadows the standard
# library's core, causing thiserror's derive macros to fail when they generate
# code referencing core::fmt and core::write!.
[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
transfer = { path = "../transfer", default-features = false }
protocol = { path = "../protocol" }
metadata = { path = "../metadata", default-features = false }
engine = { path = "../engine", default-features = false }
bandwidth = { path = "../bandwidth" }
rsync_io = { path = "../rsync_io", package = "rsync_io" }
filters = { path = "../filters" }
compress = { path = "../compress" }
flist = { path = "../flist" }
logging = { path = "../logging" }
thiserror = "2.0"
tracing = { workspace = true, optional = true }
libc = "0.2"
base64 = "0.22"
tempfile = "3.10"
socket2 = "0.4"
filetime = "0.2"
branding = { path = "../branding" }
tokio = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
checksums = { path = "../checksums" }
nix = { version = "0.29", default-features = false, features = ["user"] }
rustix = { version = "0.38", features = ["process"] }

[target.'cfg(windows)'.dependencies]
checksums = { path = "../checksums", default-features = false }

[target.'cfg(unix)'.dependencies.metadata]
path = "../metadata"
default-features = false
features = ["xattr"]

[target.'cfg(unix)'.dependencies.engine]
path = "../engine"
default-features = false
features = ["xattr"]

[features]
default = ["zstd", "lz4", "acl", "xattr", "iconv"]
acl = ["metadata/acl", "engine/acl", "transfer/acl"]
# xattr in core is a no-op on Windows; on Unix the target deps above add the real bits
xattr = ["transfer/xattr"]
zstd = ["engine/zstd", "compress/zstd", "transfer/zstd"]
lz4 = ["engine/lz4", "compress/lz4", "transfer/lz4"]
iconv = ["protocol/iconv"]
sd-notify = []
# Async runtime support - enables tokio-based async I/O for core operations
async = ["dep:tokio", "engine/async"]
# Structured logging instrumentation for performance analysis and diagnostics
tracing = ["dep:tracing"]

[dev-dependencies]
filetime = "0.2"
tempfile = "3.10"
tracing-subscriber = { workspace = true }
