[package]
name = "core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core utilities shared by the Rust rsync implementation"
repository.workspace = true
build = "build.rs"

# Doctests are disabled because the crate name "core" shadows the standard
# library's core, causing thiserror's derive macros to fail when they generate
# code referencing core::fmt and core::write!.
[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
transfer = { path = "../transfer", default-features = false }
protocol = { path = "../protocol" }
metadata = { path = "../metadata", default-features = false }
engine = { path = "../engine", default-features = false }
bandwidth = { path = "../bandwidth" }
rsync_io = { path = "../rsync_io", package = "rsync_io" }
filters = { path = "../filters" }
compress = { path = "../compress" }
flist = { path = "../flist" }
logging = { path = "../logging" }
fast_io = { path = "../fast_io", default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
libc = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
socket2 = { workspace = true }
filetime = { workspace = true }
branding = { path = "../branding" }
tokio = { workspace = true, optional = true }
zeroize = { workspace = true }

[target.'cfg(unix)'.dependencies]
checksums = { path = "../checksums" }
nix = { workspace = true, features = ["user"] }
rustix = { workspace = true, features = ["process"] }

[target.'cfg(windows)'.dependencies]
checksums = { path = "../checksums", default-features = false }

[target.'cfg(unix)'.dependencies.metadata]
path = "../metadata"
default-features = false
features = ["xattr"]

[target.'cfg(unix)'.dependencies.engine]
path = "../engine"
default-features = false
features = ["xattr"]

[features]
default = ["zstd", "lz4", "xattr", "iconv"]

# ============================================================================
# Compression Features
# ============================================================================
zstd = ["engine/zstd", "compress/zstd", "transfer/zstd", "protocol/zstd"]
lz4 = ["engine/lz4", "compress/lz4", "transfer/lz4", "protocol/lz4"]
zlib-ng = ["compress/zlib-ng", "engine/zlib-ng", "transfer/zlib-ng", "protocol/zlib-ng"]

# ============================================================================
# Metadata Features
# ============================================================================
# xattr on Windows uses metadata/xattr_windows (FindFirstStreamW ADS); on Unix the target deps above add the real bits
xattr = ["metadata/xattr", "transfer/xattr", "engine/xattr"]
acl = ["metadata/acl", "engine/acl", "transfer/acl"]

# Character encoding conversion for filenames (iconv)
iconv = ["protocol/iconv", "transfer/iconv", "engine/iconv"]

# ============================================================================
# Runtime Features
# ============================================================================

# Embedded SSH transport using russh - pure Rust alternative to spawning system ssh
embedded-ssh = ["dep:tokio", "rsync_io/embedded-ssh"]

# Async runtime support - enables tokio-based async I/O for core operations
async = ["dep:tokio", "engine/async"]

# DEPRECATED (ISI.h): sender INC_RECURSE is now default-on. Marker
# retained for one release until ISI.i.2 retires the feature flag.
sender-inc-recurse = []

# Async SSH transport: wires `rsync_io::ssh::AsyncSshTransport` into the client
# remote transfer path. Opt-in at runtime via the `OC_RSYNC_ASYNC_SSH=1` env
# var until the CLI flag lands (#1806).
async-ssh = ["dep:tokio", "rsync_io/async-ssh"]

# systemd sd-notify integration
sd-notify = []

# ============================================================================
# Debugging Features
# ============================================================================

# Structured logging instrumentation for performance analysis and diagnostics
tracing = ["dep:tracing"]

[dev-dependencies]
filetime = { workspace = true }
tempfile = { workspace = true }
test-support = { path = "../test-support" }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "transfer_benchmark"
harness = false

[[bench]]
name = "pip_6_end_to_end_parallel_vs_sequential"
harness = false
