[package]
name = "daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = []
sd-notify = ["dep:sd-notify", "core/sd-notify"]
# Async runtime support - enables tokio-based async I/O for daemon operations
async = ["dep:tokio", "core/async"]
# Hybrid async listener: tokio accept loop dispatching sync workers via
# spawn_blocking. Skeleton path tracked under issue #1935; opt-in at build time
# and not yet wired as the default. See
# `docs/design/daemon-tokio-async-listener-impl.md` for the rollout plan.
async-daemon = ["dep:tokio"]
# Concurrent session tracking - enables efficient shared state for multi-session daemons
concurrent-sessions = ["dep:dashmap"]
# Extended attributes (xattr) preservation during transfers
xattr = ["core/xattr"]
# Structured logging instrumentation for daemon diagnostics
tracing = ["dep:tracing", "core/tracing"]
# ACL (Access Control Lists) support on Unix systems
acl = ["core/acl", "metadata/acl"]
# Filename charset transcoding via the module `charset =` directive (iconv).
iconv = ["core/iconv", "protocol/iconv"]

[dependencies]
clap = { workspace = true }
base64 = { workspace = true }
dns-lookup = "3.0"
compress = { path = "../compress" }
core = { path = "../core", default-features = false }
metadata = { path = "../metadata", default-features = false }
platform = { path = "../platform" }
protocol = { path = "../protocol" }
logging-sink = { path = "../logging-sink" }
fs2 = "0.4"
socket2 = { workspace = true, features = ["all"] }
tempfile = { workspace = true }
tokio = { workspace = true, optional = true, features = ["net", "io-util", "sync", "rt", "rt-multi-thread", "time", "macros"] }
dashmap = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[target.'cfg(not(windows))'.dependencies]
checksums = { path = "../checksums" }
libc = { workspace = true }

# sd-notify is Linux-only (systemd notification)
[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = { version = "0.5.0", optional = true }

[target.'cfg(windows)'.dependencies]
checksums = { path = "../checksums", default-features = false }
windows = { workspace = true, features = [
    "Win32_Foundation",
] }

[dev-dependencies]
bandwidth = { path = "../bandwidth", features = ["test-support"] }
criterion = { workspace = true }
filetime = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[target.'cfg(unix)'.dev-dependencies]
xattr = { workspace = true }
exacl = { workspace = true }

# fast_io BgidAllocator backs the bgid_long_running_stress test. Linux-only:
# the io_uring backend (and the bgid namespace it manages) only ships there.
[target.'cfg(target_os = "linux")'.dev-dependencies]
fast_io = { path = "../fast_io", default-features = false, features = ["io_uring"] }

[[bench]]
name = "daemon_benchmark"
harness = false
